# djangoTgBot

./: .env_prod  .gitignore  manage.py  pyproject.toml
bot/: main_bot.py
bot/management/commands/: run_bot.py
djangoTgBot/: asgi.py  settings.py  urls.py  wsgi.py
