[tool.poetry]
name = "djangotgbot"
version = "0.1.0"
description = ""
authors = ["Andrew Demchuk"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"
django-grappelli = "4.0.1"
environs = "11.0.0"
pyTelegramBotAPI = "4.22.0"
psycopg2-binary = "2.9.9"
aiohttp="3.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
